# TypingSpeedTest

./: .gitignore  MANIFEST.in  Pipfile  README.md  app.py  babel.cfg  dodo.py  index.html  messages.pot  pyproject.toml  requirements.txt  tools.py
_build/doctrees/: techDoc.doctree
_build/html/: Quickstart.html  index.html  objects.inv  searchindex.js  techDoc.html
_build/html/_sources/: index.rst.txt
app/: __main__.py  pages.py  tools.py
app/static/css/: styles.css
app/templates/: home.html  macros.html  maxWordFixedTime.html  result.html  result2.html
app/translations/ru/LC_MESSAGES/: messages.mo  messages.po
doc/: conf.py  index.rst  techDoc.rst
doc/_build/doctrees/: Quickstart.doctree  environment.pickle  index.doctree
doc/_build/html/: genindex.html  search.html
doc/_build/html/_sources/: Quickstart.rst.txt
templates/: home.html  macros.html  maxWordFixedTime.html  result.html  result2.html
test/: __init__.py
translations/en/LC_MESSAGES/: messages.mo
translations/ru/LC_MESSAGES/: messages.mo  messages.po
