[project]
name = "TypingSpeedTest"
version = "0.1.2"
description = "Exam project for PythonDevelopment2023 course"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "COPYNG"}
authors = [
 {name = "Chekhonina Ekaterina", email = "catherine.fish2.0@yandex.ru"},
 {name = "Mudarova Ramina", email = "animarosaceus@mail.ru"}
]

keywords = ["Flask", "Jinja", "project", "test"]
classifiers = [
      "Development Status :: 5 - Production/Stable",
      "Framework :: Flask",
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.urls]
repository = "https://github.com/CatherineFish/TypingSpeedTest"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["sphinx", "doit", "flake8", "pydocstyle", "build", "setuptools"]


[tool.setuptools.package-dir]
TypingSpeedTest = "app"

[tool.setuptools.package-data]
TypingSpeedTest = ["app/ru/*/*.mo"]